<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reviews_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_button_text"
            app:icon="@drawable/reviews_button_icon"
            app:iconGravity="start" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reviews_not_signed_in_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:text="@string/reviews_not_signed_in_text"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:text="@string/reviews_latest_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"/>
</LinearLayout>